--- a/rocketlawyer/index.htm
+++ b/rocketlawyer/index.htm
@@ -7,6 +7,7 @@
     <title>Rocket Lawyer Case Study</title>
     <link rel="stylesheet" href="../styles.css">
     <link rel="stylesheet" href="../case-study.css">
+    <script src="../case-study.js" defer></script>
 </head>
 
 <body class="case-study">
@@ -341,177 +342,6 @@
                     <button class="next-slide">→</button>
                 </div>
             </div>
-
-            <!-- SLIDESHOW SCRIPT -->
-            <script>
-                // --------------------- FLOATING TOC VISIBILITY (SCROLL-Y OFFSET VERSION) ---------------------
-                const staticToc = document.querySelector(".cs-toc-top");
-                const floatingToc = document.querySelector(".cs-toc--floating");
-
-                let triggerY = 0;
-
-                // Compute trigger from static TOC position + height - buffer
-                function computeTrigger() {
-                    if (!staticToc) return;
-
-                    const rect = staticToc.getBoundingClientRect();
-                    const absoluteTop = window.scrollY + rect.top;
-                    const buffer = 80; // early handoff
-
-                    triggerY = absoluteTop + rect.height - buffer;
-                }
-
-                function updateTocStates() {
-                    const isDesktop = window.innerWidth >= 1100;
-
-                    if (!isDesktop) {
-                        floatingToc.classList.remove("visible");
-                        return;
-                    }
-
-                    // Show floating TOC once you scroll past static TOC zone
-                    if (window.scrollY >= triggerY) {
-                        floatingToc.classList.add("visible");
-                    } else {
-                        floatingToc.classList.remove("visible");
-                    }
-                }
-
-                // Init
-                window.addEventListener("load", () => {
-                    computeTrigger();
-                    updateTocStates();
-                });
-
-                window.addEventListener("resize", () => {
-                    computeTrigger();
-                    updateTocStates();
-                });
-
-                window.addEventListener("scroll", updateTocStates);
-                // --------------------- CORE SELECTORS ---------------------
-                const slides = document.querySelectorAll(".slide");
-                const captionEl = document.getElementById("slideshow-caption");
-                const prevBtn = document.querySelector(".prev-slide");
-                const nextBtn = document.querySelector(".next-slide");
-                const frame = document.querySelector(".slideshow-frame");
-
-                // Lightbox
-                const lightbox = document.getElementById("slideshow-lightbox");
-                const lightboxImg = document.getElementById("lightbox-image");
-                const lightboxCaption = document.getElementById("lightbox-caption");
-                const lightboxPrev = document.querySelector(".lightbox-prev");
-                const lightboxNext = document.querySelector(".lightbox-next");
-
-                let index = 0;
-
-                // --------------------- SHOW SLIDE ---------------------
-                function showSlide(i) {
-                    slides.forEach(s => s.classList.remove("active"));
-                    slides[i].classList.add("active");
-
-                    const caption = slides[i].getAttribute("data-caption") || "";
-                    captionEl.textContent = caption;
-                }
-
-                // --------------------- NAV BUTTONS (with looping) ---------------------
-                prevBtn.addEventListener("click", () => {
-                    index = (index - 1 + slides.length) % slides.length;
-                    showSlide(index);
-                });
-
-                nextBtn.addEventListener("click", () => {
-                    index = (index + 1) % slides.length;
-                    showSlide(index);
-                });
-
-                // --------------------- LIGHTBOX CONTROL ---------------------
-                function openLightbox(i) {
-                    const trigger = slides[i].querySelector(".slide-image-trigger");
-                    const fullSrc = trigger.getAttribute("data-fullsrc");
-                    const caption = trigger.getAttribute("data-caption");
-
-                    if (trigger.classList.contains("transparent-bg")) {
-                        lightboxImg.classList.add("lightbox-dark-bg");
-                    } else {
-                        lightboxImg.classList.remove("lightbox-dark-bg");
-                    }
-
-                    lightboxImg.src = fullSrc;
-                    lightboxCaption.textContent = caption;
-                    lightbox.classList.add("active");
-                }
-
-                slides.forEach((slide, i) => {
-                    const trigger = slide.querySelector(".slide-image-trigger");
-                    trigger.addEventListener("click", () => {
-                        index = i;
-                        showSlide(index);
-                        openLightbox(index);
-                    });
-                });
-
-                // Click image to advance (with looping)
-                lightboxImg.addEventListener("click", () => {
-                    index = (index + 1) % slides.length;
-                    showSlide(index);
-                    openLightbox(index);
-                });
-
-                // Lightbox prev/next buttons
-                lightboxPrev.addEventListener("click", (e) => {
-                    e.stopPropagation();
-                    index = (index - 1 + slides.length) % slides.length;
-                    showSlide(index);
-                    openLightbox(index);
-                });
-
-                lightboxNext.addEventListener("click", (e) => {
-                    e.stopPropagation();
-                    index = (index + 1) % slides.length;
-                    showSlide(index);
-                    openLightbox(index);
-                });
-
-                lightbox.addEventListener("click", (e) => {
-                    if (e.target === lightbox) {
-                        lightbox.classList.remove("active");
-                        lightboxImg.src = "";
-                        lightboxImg.classList.remove("lightbox-dark-bg");
-                    }
-                });
-
-                function adjustSlideshowHeight() {
-                    const w = frame.offsetWidth;
-                    const h = w * 0.625;
-                    frame.style.height = h + "px";
-                }
-
-                window.addEventListener("load", adjustSlideshowHeight);
-                window.addEventListener("resize", adjustSlideshowHeight);
-
-                showSlide(0);
-            </script>
-            <script>
-                // --------------------- ACTIVE TOC HIGHLIGHT ON SCROLL ---------------------
-                document.addEventListener("scroll", () => {
-                    const sections = document.querySelectorAll(".section[id]");
-                    const tocItems = document.querySelectorAll(".cs-toc-item");
-
-                    let current = "";
-
-                    sections.forEach(section => {
-                        const rect = section.getBoundingClientRect();
-                        if (rect.top < 200 && rect.bottom > 200) {
-                            current = section.id;
-                        }
-                    });
-
-                    tocItems.forEach(item => {
-                        item.classList.toggle("active", item.dataset.section === current);
-                    });
-                });
-            </script>
 
         </div>
     </div>
