--- a/index.htm
+++ b/index.htm
@@ -735,7 +735,10 @@
                                         class="project-image">
                                 </div>
                                 <div class="card-content">
+                                    <a href="https://middleton.io/lever/" target="_blank"
+                                        rel="noopener noreferrer" class="project-link">
                                     <h3 class="project-title">Org Chart Sync and Self-Serve Bulk Importer</h3>
+                                    </a>
                                     <p class="project-description">Launched Org Chart Sync for HRIS integration,
                                         improving user profiles and enabling org‑aware approvals across hiring
                                         workflows. Achieved <strong>37% engagement</strong> in Q1 and reduced admin
