--- a/index.htm
+++ b/index.htm
@@ -719,7 +719,10 @@
                                         class="project-image">
                                 </div>
                                 <div class="card-content">
+                                    <a href="https://middleton.io/sendoso/" target="_blank"
+                                        rel="noopener noreferrer" class="project-link">
                                     <h3 class="project-title">eGift Platform Expansion & Square Partnership</h3>
+                                    </a>
                                     <p class="project-description">Drove <strong>23%</strong> U.S. and
                                         <strong>67%</strong> international growth by expanding the eGift catalog and
                                         integrating Square for local eGifting across the U.S., Canada, Australia, and
