--- a/index.htm
+++ b/index.htm
@@ -772,7 +772,10 @@
                                         class="project-image">
                                 </div>
                                 <div class="card-content">
+                                      <a href="https://middleton.io/rocketlawyer/rocketlawyer-conversion.htm" target="_blank"
+                                        rel="noopener noreferrer" class="project-link">
                                     <h3 class="project-title">Legal Document Conversion Rates</h3>
+                                      </a>
                                     <p class="project-description">Increased mobile gross conversions by
                                         <strong>5%</strong> for Rocket Lawyer’s highest‑revenue product line through
                                         targeted A/B tests and mobile UX improvements.
