--- a/index.htm
+++ b/index.htm
@@ -719,9 +719,9 @@
                                         class="project-image">
                                 </div>
                                 <div class="card-content">
-                                    <a href="https://middleton.io/sendoso/" target="_blank"
-                                        rel="noopener noreferrer" class="project-link">
-                                    <h3 class="project-title">eGift Platform Expansion & Square Partnership</h3>
+                                    <a href="https://middleton.io/sendoso/" target="_blank" rel="noopener noreferrer"
+                                        class="project-link">
+                                        <h3 class="project-title">eGift Platform Expansion & Square Partnership</h3>
                                     </a>
                                     <p class="project-description">Drove <strong>23%</strong> U.S. and
                                         <strong>67%</strong> international growth by expanding the eGift catalog and
@@ -738,9 +738,9 @@
                                         class="project-image">
                                 </div>
                                 <div class="card-content">
-                                    <a href="https://middleton.io/lever/" target="_blank"
-                                        rel="noopener noreferrer" class="project-link">
-                                    <h3 class="project-title">Org Chart Sync and Self-Serve Bulk Importer</h3>
+                                    <a href="https://middleton.io/lever/" target="_blank" rel="noopener noreferrer"
+                                        class="project-link">
+                                        <h3 class="project-title">Org Chart Sync and Self-Serve Bulk Importer</h3>
                                     </a>
                                     <p class="project-description">Launched Org Chart Sync for HRIS integration,
                                         improving user profiles and enabling org‑aware approvals across hiring
@@ -772,10 +772,10 @@
                                         class="project-image">
                                 </div>
                                 <div class="card-content">
-                                      <a href="https://middleton.io/rocketlawyer/rocketlawyer-conversion.htm" target="_blank"
-                                        rel="noopener noreferrer" class="project-link">
-                                    <h3 class="project-title">Legal Document Conversion Rates</h3>
-                                      </a>
+                                    <a href="https://middleton.io/rocketlawyer/rocketlawyer-conversion.htm"
+                                        target="_blank" rel="noopener noreferrer" class="project-link">
+                                        <h3 class="project-title">Legal Document Conversion Rates</h3>
+                                    </a>
                                     <p class="project-description">Increased mobile gross conversions by
                                         <strong>5%</strong> for Rocket Lawyer’s highest‑revenue product line through
                                         targeted A/B tests and mobile UX improvements.
