--- a/index.htm
+++ b/index.htm
@@ -723,11 +723,9 @@
                                         class="project-link">
                                         <h3 class="project-title">eGift Platform Expansion & Square Partnership</h3>
                                     </a>
-                                    <p class="project-description">Drove <strong>23%</strong> U.S. and
-                                        <strong>67%</strong> international growth by expanding the eGift catalog and
-                                        integrating Square for local eGifting across the U.S., Canada, Australia, and
-                                        the U.K. Increased platform trust through security and fraud‑prevention
-                                        enhancements.
+                                    <p class="project-description">Doubled eGift coverage to 1,600+ options across 47
+                                        countries. Landed the Square partnership for local gifting in 4 markets. eGifts
+                                        represented over half of all platform sends.
                                     </p>
                                 </div>
                             </div>
@@ -740,12 +738,11 @@
                                 <div class="card-content">
                                     <a href="https://middleton.io/lever/" target="_blank" rel="noopener noreferrer"
                                         class="project-link">
-                                        <h3 class="project-title">Org Chart Sync and Self-Serve Bulk Importer</h3>
+                                        <h3 class="project-title">Moving Lever Upmarket</h3>
                                     </a>
-                                    <p class="project-description">Launched Org Chart Sync for HRIS integration,
-                                        improving user profiles and enabling org‑aware approvals across hiring
-                                        workflows. Achieved <strong>37% engagement</strong> in Q1 and reduced admin
-                                        effort through a self‑serve bulk importer.</p>
+                                    <p class="project-description">Proved Lever could operate at enterprise scale.
+                                        Reduced migration time from days to minutes with self-serve bulk import and
+                                        launched HRIS Sync for org-aware hiring workflows. 37% engagement in Q1.</p>
                                 </div>
                             </div>
 
@@ -759,10 +756,9 @@
                                         rel="noopener noreferrer" class="project-link">
                                         <h3 class="project-title">Co-Branded Partner Sites</h3>
                                     </a>
-                                    <p class="project-description">Launched co-branded partner sites for Rocket Lawyer,
-                                        delivering localized experiences with configurable authentication, pricing,
-                                        content, and feature sets. The rollout reached <strong>11.5 million
-                                            users</strong> and created a new enterprise revenue channel.</p>
+                                    <p class="project-description">Launched Rocket Lawyer's first enterprise partnership
+                                        in six months, reaching 11.5M partner customers. Built a configurable platform
+                                        that powered the next ten integrations.</p>
                                 </div>
                             </div>
 
@@ -774,11 +770,11 @@
                                 <div class="card-content">
                                     <a href="https://middleton.io/rocketlawyer/rocketlawyer-conversion.htm"
                                         target="_blank" rel="noopener noreferrer" class="project-link">
-                                        <h3 class="project-title">Legal Document Conversion Rates</h3>
+                                        <h3 class="project-title">Mobile Conversion Optimization</h3>
                                     </a>
-                                    <p class="project-description">Increased mobile gross conversions by
-                                        <strong>5%</strong> for Rocket Lawyer’s highest‑revenue product line through
-                                        targeted A/B tests and mobile UX improvements.
+                                    <p class="project-description">Failed fast on desktop. Won big on mobile. Drove a 5%
+                                        conversion lift for Rocket Lawyer's highest-revenue product line through
+                                        targeted A/B testing.
                                     </p>
                                 </div>
                             </div>
