--- a/index.htm
+++ b/index.htm
@@ -534,9 +534,9 @@
                             </p>
 
                             <ul class="job-highlights">
-                                <li><strong>Catalog Expansion:</strong> Expanded the eGift catalog by 23% in the U.S.
-                                    and 67% internationally, onboarding new partners and integrating Square as a key
-                                    vendor for global growth.</li>
+                                <li><strong>Catalog Expansion:</strong> Doubled active eGift coverage from 800 to 1,600
+                                    options across 47 countries. Landed the Square partnership for local gifting in the
+                                    U.S., Canada, Australia, and U.K.</li>
                                 <li><strong>Platform Security:</strong> Increased platform trust by implementing
                                     two‑factor authentication and AI‑driven fraud detection, reducing bot‑driven
                                     attacks.</li>
@@ -549,6 +549,8 @@
                                 <li><strong>Product Alignment:</strong> Partnered with the Head of Product to align the
                                     platform strategy with Sendoso’s marketplace goals, ensuring scalable growth across
                                     global markets.</li>
+                                <li><strong>Business Impact:</strong> eGifts represented over half of all sends through
+                                    the platform in 2021.</li>
                             </ul>
 
                             <div class="project-images">
