--- a/nyc/index.htm
+++ b/nyc/index.htm
@@ -17,18 +17,18 @@
 
       <!-- HERO -->
       <section class="nyc-hero">
-        <h1>12 years building products with teams that give a damn.</h1>
+        <h1>12 years building products with teams that give a damn</h1>
 
         <p class="subline">
-          I build serious products with teams that actually like working together.
+          I build serious products with teams that actually like working together.<br>
           I take the work seriously. I don't take myself too seriously.
         </p>
 
-        <div class="meta">New York City · Open to Remote</div>
+        <div class="meta">New York City · In‑Office or Remote</div>
       </section>
 
       <!-- WHO THIS IS FOR -->
-      <section class="nyc-section">
+      <section class="nyc-section" style="margin-top: var(--spacing-xl);">
         <h2>This page is for</h2>
         <ul class="nyc-list">
           <li>Product leaders who value judgment over theater</li>
@@ -40,7 +40,7 @@
 
       <!-- WHAT I BRING -->
       <section class="nyc-section">
-        <h2>What I bring</h2>
+        <h2>What I bring to a team</h2>
         <ul class="nyc-list">
           <li>12+ years across consumer, enterprise, and platform SaaS</li>
           <li>Messy, real-world domains where outcomes actually matter</li>
@@ -93,8 +93,7 @@
       <section class="nyc-section">
         <h2>I've done this before</h2>
         <p>
-          Built and scaled products at Oracle, Rocket Lawyer, Lever, and HVAC.com / Trane.
-          Shipped enterprise platforms, complex integrations, and systems teams rely on every day.
+          Built and scaled products at Oracle, Rocket Lawyer, Lever, and HVAC.com / Trane — enterprise platforms, complex integrations, and systems teams rely on every day.
         </p>
 
         <div class="nyc-logos">
@@ -111,7 +110,7 @@
 
       <!-- CTA -->
       <section class="nyc-cta">
-        <h3>If this resonates, let's talk.</h3>
+        <h4>If this resonates</h4>
         <a href="https://calendly.com/kevin-middleton/15min" class="btn btn-primary">15 minutes. No pitch.</a>
         <p class="cta-note">Coffee in NYC or virtual. Your call.</p>
       </section>
