--- a/catdad/index.htm
+++ b/catdad/index.htm
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Kevin Middleton — ✨🐱✨</title>
+  <title>Kevin Middleton · ✨🐱✨</title>
   <link rel="stylesheet" href="../styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -54,10 +54,10 @@
       <section class="kawaii-section rainbow-border">
         <h2>✨ The vibe</h2>
         <p>
-          It's software, not magic. And we're not curing cancer. <span class="handwritten">(Though if you are — that's super serious, you guys!)</span>
+          It's software, not magic. And we're not curing cancer. <span class="handwritten">(Though if you are, that's super serious, you guys!)</span>
         </p>
         <p>
-          I love doing great work with great people. Give me a hard problem, a team that collaborates for real, and an environment where everyone feels safe to speak up — and I'm happy~ ♡
+          I love doing great work with great people. Give me a hard problem, a team that collaborates for real, and an environment where everyone feels safe to speak up. That's when I'm happy~ ♡
         </p>
       </section>
 
@@ -67,7 +67,7 @@
       <section class="kawaii-section rainbow-border">
         <h2 class="gradient-text">🛠 Meow I Work</h2>
         <ul class="kawaii-list">
-          <li>I think out loud and talk more than you'd expect — that's the collaboration working~</li>
+          <li>I think out loud and talk more than you'd expect. That's the collaboration working~</li>
           <li>My brain runs at 1000 mph, mostly thinking about process improvements ⚡</li>
           <li>I'll learn any tool, automate the boring stuff, fill gaps without being asked</li>
           <li>I have opinions, but I'll change my mind when you have better info ✧</li>
@@ -81,7 +81,7 @@
       <section class="kawaii-section kawaii-callout rainbow-border">
         <h2>💬 On speaking up</h2>
         <p>
-          I'm not afraid to speak my mind — when I feel safe. And I want to build that same environment for you. Teams do their best work when people can say the honest thing without fear~
+          I'm not afraid to speak my mind, when I feel safe. And I want to build that same environment for you. Teams do their best work when people can say the honest thing without fear~
         </p>
         <p class="kawaii-closer">If your team has that energy, we'll get along great! (◕ᴗ◕✿)</p>
       </section>
@@ -93,12 +93,12 @@
         <h2 class="gradient-text">🐱 The Fur Babies</h2>
         <p>Yes, there are three. They're part of the deal~ ♡</p>
         <div class="cats-photo wiggle-hover">
-          <img src="https://middleton.io/catdad/images/blue_scarlet_luna.png" alt="Blue, Scarlet, and Luna — the three cats">
+          <img src="https://middleton.io/catdad/images/blue_scarlet_luna.png" alt="Blue, Scarlet, and Luna, the three cats">
         </div>
         <ul class="kawaii-list cat-list">
-          <li><strong>Blue</strong> — The lawyer. Always advocating for the group. Very professional. ⚖️</li>
-          <li><strong>Scarlet</strong> — Cutesy. Demure. Very mindful. The influencer of the household. 💅</li>
-          <li><strong>Luna</strong> — The baby. Part monkey, part hunter. Will do anything for sliced turkey. 🦃</li>
+          <li><strong>Blue</strong>: The lawyer. Always advocating for the group. Very professional. ⚖️</li>
+          <li><strong>Scarlet</strong>: Cutesy. Demure. Very mindful. The influencer of the household. 💅</li>
+          <li><strong>Luna</strong>: The baby. Part monkey, part hunter. Will do anything for sliced turkey. 🦃</li>
         </ul>
         <p class="kawaii-closer">I also love dogs. Please tell your dog I said hi~ 🐕✨</p>
       </section>
@@ -109,11 +109,11 @@
       <section class="kawaii-section rainbow-border">
         <h2>💖 What coworkers say</h2>
         <ul class="kawaii-list">
-          <li>"Go-getter — when he knows how to help, he just does it" ✧</li>
+          <li>"Go-getter: when he knows how to help, he just does it" ✧</li>
           <li>"Brain works 1000 miles an hour" ⚡</li>
           <li>"Strong opinions loosely held" 💭</li>
           <li>"Fills gaps and provides cover when needed" 🛡️</li>
-          <li>"Loyal — when he feels you've done right by him" 💖</li>
+          <li>"Loyal: when he feels you've done right by him" 💖</li>
         </ul>
       </section>
 
