--- a/catdad/kawaii.htm
+++ b/catdad/kawaii.htm
@@ -41,7 +41,7 @@
           <img src="https://middleton.io/images/cat-illustration.png" alt="Kawaii cat illustration of Kevin">
           <div class="hero-glow"></div>
         </div>
-        <h1 class="gradient-text">Hi, I'm Kevin. (｡◕‿◕｡)</h1>
+        <h1 class="gradient-text">Hi, I'm Kevin. <span class="nowrap">(｡◕‿◕｡)</span></h1>
         <p class="subline">
           Product manager. Cat dad. Believes the best ideas come from teams that actually <em>like</em> talking to each other.
         </p>
@@ -71,7 +71,7 @@
           <li>My brain runs at 1000 mph, mostly thinking about process improvements ⚡</li>
           <li>I'll learn any tool, automate the boring stuff, fill gaps without being asked</li>
           <li>I have opinions, but I'll change my mind when you have better info ✧</li>
-          <li>I focus on real progress, not theater (ノ◕ヮ◕)ノ*:・゚✧</li>
+          <li>I focus on real progress, not theater <span class="nowrap">(ノ◕ヮ◕)ノ*:・゚✧</span></li>
         </ul>
       </section>
 
@@ -138,7 +138,7 @@
 
       <!-- CTA -->
       <section class="kawaii-cta rainbow-border">
-        <h3 class="gradient-text">Want to chat? (=^･ω･^=)</h3>
+        <h3 class="gradient-text">Want to chat? <span class="nowrap">(=^･ω･^=)</span></h3>
         <p class="cta-subline">15 minutes. I promise not to make cat puns.<br><span class="cta-whisper handwritten">(I might make cat puns.)</span></p>
         <button class="btn kawaii-btn boing" id="ctaBtn" onclick="handleCTA()">Let's talk ✨🐱✨</button>
         <p class="cta-note">I'll tell Blue you said hi~ ♡</p>
