--- a/catdad/index.htm
+++ b/catdad/index.htm
@@ -41,14 +41,14 @@
           <img src="https://middleton.io/images/cat-illustration.png" alt="Kawaii cat illustration of Kevin">
           <div class="hero-glow"></div>
         </div>
-        <h1 class="gradient-text">Hi, I'm Kevin. (｡◕‿◕｡)</h1>
+        <h1 class="gradient-text">Hi, I'm Kevin. <span class="nowrap">(｡◕‿◕｡)</span></h1>
         <p class="subline">
           Product manager. Cat dad. Believes the best ideas come from teams that actually <em>like</em> talking to each other.
         </p>
-        <div class="meta">NYC · 3 cats · Strong opinions, loosely held ✧</div>
+        <div class="meta">NYC · 3 cats<br class="mobile-break"> Strong opinions, loosely held ✧</div>
       </section>
 
-      <div class="section-divider">・。.・゜✭・.・✫・゜・。.</div>
+      <div class="section-divider">・。.・゜✭<br class="mobile-break">・.・✫・゜・。.</div>
 
       <!-- THE VIBE -->
       <section class="kawaii-section rainbow-border">
@@ -61,7 +61,7 @@
         </p>
       </section>
 
-      <div class="section-divider">♡ ∩_∩<br>(„• ֊ •„)♡</div>
+      <div class="section-divider">♡ ∩_∩<br><span class="nowrap">(„• ֊ •„)♡</span></div>
 
       <!-- HOW I WORK -->
       <section class="kawaii-section rainbow-border">
@@ -71,7 +71,7 @@
           <li>My brain runs at 1000 mph, mostly thinking about process improvements ⚡</li>
           <li>I'll learn any tool, automate the boring stuff, fill gaps without being asked</li>
           <li>I have opinions, but I'll change my mind when you have better info ✧</li>
-          <li>I focus on real progress, not theater (ノ◕ヮ◕)ノ*:・゚✧</li>
+          <li>I focus on real progress, not theater <span class="nowrap">(ノ◕ヮ◕)ノ*:・゚✧</span></li>
         </ul>
       </section>
 
@@ -103,7 +103,7 @@
         <p class="kawaii-closer">I also love dogs. Please tell your dog I said hi~ 🐕✨</p>
       </section>
 
-      <div class="section-divider">˚₊‧꒰ა ≽^•⩊•^≼ ໒꒱ ‧₊˚</div>
+      <div class="section-divider"><span class="nowrap">˚₊‧꒰ა ≽^•⩊•^≼ ໒꒱ ‧₊˚</span></div>
 
       <!-- WHAT PEOPLE SAY -->
       <section class="kawaii-section rainbow-border">
@@ -134,11 +134,11 @@
         </p>
       </section>
 
-      <div class="section-divider">♡⸜(˃ ᵕ ˂ )⸝♡</div>
+      <div class="section-divider"><span class="nowrap">♡⸜(˃ ᵕ ˂ )⸝♡</span></div>
 
       <!-- CTA -->
       <section class="kawaii-cta rainbow-border">
-        <h3 class="gradient-text">Want to chat? (=^･ω･^=)</h3>
+        <h3 class="gradient-text">Want to chat? <span class="nowrap">(=^･ω･^=)</span></h3>
         <p class="cta-subline">15 minutes. I promise not to make cat puns.<br><span class="cta-whisper handwritten">(I might make cat puns.)</span></p>
         <button class="btn kawaii-btn boing" id="ctaBtn" onclick="handleCTA()">Let's talk ✨🐱✨</button>
         <p class="cta-note">I'll tell Blue you said hi~ ♡</p>
