--- a/fixer/index.htm
+++ b/fixer/index.htm
@@ -28,7 +28,7 @@
 
             <!-- HERO -->
             <section class="fixer-hero">
-              <h1>Something isn't working.</h1>
+              <h1>Something in your product isn't working.</h1>
               <p class="subline">That's a solvable problem.</p>
             </section>
 
