--- a/nyc/index.htm
+++ b/nyc/index.htm
@@ -1,9 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Kevin Middleton — NYC</title>
+
+  <!-- Open Graph -->
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="12 years building products with teams that give a damn." />
+  <meta property="og:description"
+    content="Seriously unserious product thinking. No theater. No hype. Just real work, real teams, and clarity when things get messy." />
+  <meta property="og:url" content="https://middleton.io/nyc" />
+  <meta property="og:image" content="https://middleton.io/nyc/images/nyc.png" />
+  <meta property="og:image:alt"
+    content="12 years building products with teams that give a damn. New York City · In-Office or Remote." />
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="12 years building products with teams that give a damn." />
+  <meta name="twitter:description" content="No theater. No hype. Serious product work with teams that care." />
+  <meta name="twitter:image" content="https://middleton.io/nyc/images/nyc.png" />
 
   <!-- Base site styles -->
   <link rel="stylesheet" href="../styles.css">
@@ -93,7 +110,8 @@
       <section class="nyc-section">
         <h2>I've done this before</h2>
         <p>
-          Built and scaled products at Oracle, Rocket Lawyer, Lever, and HVAC.com / Trane — enterprise platforms, complex integrations, and systems teams rely on every day.
+          Built and scaled products at Oracle, Rocket Lawyer, Lever, and HVAC.com / Trane — enterprise platforms,
+          complex integrations, and systems teams rely on every day.
         </p>
 
         <div class="nyc-logos">
@@ -118,4 +136,5 @@
     </div>
   </main>
 </body>
+
 </html>
