--- a/officehours/index.htm
+++ b/officehours/index.htm
@@ -1,13 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Product Office Hours · Kevin Middleton</title>
+
+  <!-- Open Graph -->
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Free Product Help. No Strings." />
+  <meta property="og:description"
+    content="Weekly product office hours. Bring a messy problem. Leave with a clearer head. No pitch. No recruiting." />
+  <meta property="og:url" content="https://middleton.io/officehours" />
+  <meta property="og:image" content="https://middleton.io/officehours/images/officehours.png" />
+  <meta property="og:image:alt" content="Product Office Hours. Bring a messy problem. Leave with a clearer head." />
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Free Product Help. No Strings." />
+  <meta name="twitter:description" content="Office hours for product problems that don’t fit in a deck." />
+  <meta name="twitter:image" content="https://middleton.io/officehours/images/officehours.png" />
+
   <link rel="stylesheet" href="../styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;800&family=Permanent+Marker&family=Caveat:wght@500;600;700&family=Patrick+Hand&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;800&family=Permanent+Marker&family=Caveat:wght@500;600;700&family=Patrick+Hand&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" href="officehours.css">
 </head>
 
@@ -96,7 +115,7 @@
       <section class="oh-cta">
         <div class="oh-cta-card">
           <div class="oh-scissors">✂</div>
-          
+
           <p class="oh-cta-headline">Come as you are.</p>
           <a href="https://calendly.com/kevin-middleton/15min" class="btn oh-btn" target="_blank">
             <span>Join Office Hours</span>
@@ -108,8 +127,11 @@
 
       <!-- FOOTER NOTE -->
       <section class="oh-footer">
-        <p>Questions? <a class="js-email" href="#" data-user="kevin" data-domain="middleton.io" aria-label="Email Kevin">Just ask</a>. No forms, no funnels.</p>
-        <noscript><p>Questions? kevin [at] middleton [dot] io. No forms, no funnels.</p></noscript>
+        <p>Questions? <a class="js-email" href="#" data-user="kevin" data-domain="middleton.io"
+            aria-label="Email Kevin">Just ask</a>. No forms, no funnels.</p>
+        <noscript>
+          <p>Questions? kevin [at] middleton [dot] io. No forms, no funnels.</p>
+        </noscript>
       </section>
 
     </div>
@@ -136,4 +158,5 @@
     })();
   </script>
 </body>
+
 </html>
