--- a/nyc/index.htm
+++ b/nyc/index.htm
@@ -115,10 +115,10 @@
         </p>
 
         <div class="nyc-logos">
-          <img src="https://middleton.io/images/oracle-logo-transparent.png" alt="Oracle">
-          <img src="https://middleton.io/images/rocket-lawyer-logo-transparent.png" alt="Rocket Lawyer">
-          <img src="https://middleton.io/images/lever-logo-transparent.png" alt="Lever">
-          <img src="https://middleton.io/images/hvaccom-logo-transparent.png" alt="HVAC.com">
+          <img src="https://middleton.io/images/oracle-logo-transparent.png" alt="Oracle" title="Oracle">
+          <img src="https://middleton.io/images/rocket-lawyer-logo-transparent.png" alt="Rocket Lawyer" title="Rocket Lawyer">
+          <img src="https://middleton.io/images/lever-logo-transparent.png" alt="Lever" title="Lever">
+          <img src="https://middleton.io/images/hvac-com-logo-color.png" alt="HVAC.com" title="HVAC.com">
         </div>
 
         <p style="margin-top: var(--spacing-lg);">
