--- a/index.htm
+++ b/index.htm
@@ -332,7 +332,7 @@
                     <div class="card glass-card experience-card" id="exp-hvac">
                         <div class="card-header">
                             <div class="company-logo">
-                                <img src="https://middleton.io/images/hvaccom-logo.png" alt="HVAC.COM logo">
+                                <img src="https://middleton.io/images/hvac-com-logo-stacked-white.png" alt="HVAC.COM logo">
                             </div>
                             <div class="company-info">
                                 <h3 class="company-name">
