--- a/index.htm
+++ b/index.htm
@@ -489,6 +489,10 @@
                             </ul>
 
                             <div class="project-images">
+                                
+                                <img src="https://middleton.io/images/lever-scim-user-provisioning.png"
+                                    alt="Lever HRIS Sync settings" class="lightbox-trigger">
+                                
                                 <img src="https://middleton.io/images/lever-hris-user-profile.png"
                                     alt="Lever HRIS user profile" class="lightbox-trigger">
 
@@ -498,7 +502,6 @@
                                 <img src="https://middleton.io/images/lever-bulk-candidate-importer.png"
                                     alt="Lever bulk candidate importer" class="lightbox-trigger">
 
-                                <div class="image-placeholder"></div>
                             </div>
 
                             <div class="tags">
