--- a/index.htm
+++ b/index.htm
@@ -377,10 +377,10 @@
                             <div class="project-images">
                                 <img src="https://middleton.io/images/hvac-calculators.png" alt="HVAC.COM Calculators"
                                     class="lightbox-trigger">
+                                <img src="https://middleton.io/images/hvac-quote-step1-address.png"
+                                    alt="HVAC.COM Replacement Funnel" class="lightbox-trigger">
                                 <img src="https://middleton.io/images/hvac-quotescore.png"
                                     alt="HVAC.COM QuoteScore Landing Page" class="lightbox-trigger">
-                                <img src="https://middleton.io/images/hvac-video-content.png"
-                                    alt="HVAC.COM Video Content" class="lightbox-trigger">
                                 <img src="https://middleton.io/images/hvac-replace-landing.png"
                                     alt="HVAC.COM Replace Landing Page" class="lightbox-trigger">
                             </div>
