--- a/catdad/index.htm
+++ b/catdad/index.htm
@@ -66,7 +66,13 @@
           Product manager. Cat dad. Believes the best ideas come from teams that actually <em>like</em> talking to each
           other.
         </p>
-        <div class="meta">NYC · 3 cats<br class="mobile-break"> Strong opinions, loosely held ✧</div>
+        <div class="meta">NYC · 3 cats · Strong opinions, loosely held ✧</div>
+        
+        <p class="hero-cta-text">Open to work, open to chat, open to unsolicited cat pics. 15 min? 💬</p>
+        <div class="hero-cta-buttons">
+          <button class="btn kawaii-btn boing" onclick="handleCTA()">Let's talk 🐱</button>
+          <a href="#serious-stuff" class="btn kawaii-btn-ghost">Wait, is this person legit? →</a>
+        </div>
       </section>
 
       <div class="section-divider">・。.・゜✭<br class="mobile-break">・.・✫・゜・。.</div>
@@ -84,7 +90,7 @@
         </p>
       </section>
 
-      <div class="section-divider">♡ ∩_∩<br><span class="nowrap">(„• ֊ •„)♡</span></div>
+      <div class="section-divider">♡ ∩_∩<br><span class="nowrap">（„• ֊ •„)♡</span></div>
 
       <!-- HOW I WORK -->
       <section class="kawaii-section rainbow-border">
@@ -145,7 +151,7 @@
       <div class="section-divider">✧･ﾟ: *✧･ﾟ:* 　*:･ﾟ✧*:･ﾟ✧</div>
 
       <!-- THE WORK -->
-      <section class="kawaii-section rainbow-border">
+      <section class="kawaii-section rainbow-border" id="serious-stuff">
         <h2>💼 The Serious Stuff</h2>
         <p>
           12+ years building products at Oracle, Rocket Lawyer, Lever, Sendoso, and more~
@@ -171,9 +177,12 @@
       </section>
 
       <div class="section-divider final-divider">
-        ∧,,,∧<br>
-        ( ̳• · • ̳)<br>
-        / づ♡ thanks for visiting~
+        <div class="final-cat">
+          ∧,,,∧<br>
+          ( ̳• · • ̳)<br>
+          /づ♡
+        </div>
+        thanks for visiting~
       </div>
 
     </div>
