--- a/nyc/index.htm
+++ b/nyc/index.htm
@@ -42,6 +42,11 @@
         </p>
 
         <div class="meta">New York City · In‑Office or Remote</div>
+
+        <div class="nyc-hero-ctas">
+          <a href="#cta" class="nyc-hero-link">Let's talk →</a>
+          <a href="#proof" class="nyc-hero-link secondary">See my background →</a>
+        </div>
       </section>
 
       <!-- WHO THIS IS FOR -->
@@ -107,7 +112,7 @@
       </section>
 
       <!-- PROOF -->
-      <section class="nyc-section">
+      <section class="nyc-section" id="proof">
         <h2>I've done this before</h2>
         <p>
           Built and scaled products at Oracle, Rocket Lawyer, Lever, and HVAC.com / Trane — enterprise platforms,
@@ -127,7 +132,7 @@
       </section>
 
       <!-- CTA -->
-      <section class="nyc-cta">
+      <section class="nyc-cta" id="cta">
         <h4>If this resonates</h4>
         <a href="https://calendly.com/kevin-middleton/15min" class="btn btn-primary">15 minutes. No pitch.</a>
         <p class="cta-note">Coffee in NYC or virtual. Your call.</p>
