--- a/officehours/index.htm
+++ b/officehours/index.htm
@@ -47,6 +47,14 @@
         <div class="oh-badge">Free & Weekly</div>
         <h1><span class="oh-icon">📅</span> Product Office Hours</h1>
         <p class="subline">Bring a messy problem.<br>Leave with a clearer head.</p>
+        
+        <div class="oh-hero-ctas">
+          <a href="#cta" class="btn oh-btn">
+            <span>Grab a slot</span>
+            <span class="oh-btn-arrow">→</span>
+          </a>
+          <a href="https://middleton.io/" target="_blank" rel="noopener noreferrer" class="oh-hero-link">Who's on the other side? →</a>
+        </div>
       </section>
 
       <!-- WHAT HAPPENS -->
@@ -112,7 +120,7 @@
       </section>
 
       <!-- CTA -->
-      <section class="oh-cta">
+      <section class="oh-cta" id="cta">
         <div class="oh-cta-card">
           <div class="oh-scissors">✂</div>
 
