--- a/fixer/index.htm
+++ b/fixer/index.htm
@@ -49,6 +49,14 @@
             <section class="fixer-hero">
               <h1>Something in your product isn't working.</h1>
               <p class="subline">That's a solvable problem.</p>
+              
+              <div class="fixer-hero-ctas">
+                <a href="https://calendly.com/kevin-middleton/15min" target="_blank" rel="noopener noreferrer" class="fixer-hero-link primary">
+                  <span class="doodle-circle"></span>
+                  Book a call →
+                </a>
+                <a href="https://middleton.io/" target="_blank" rel="noopener noreferrer" class="fixer-hero-link">Who's the fixer? →</a>
+              </div>
             </section>
 
             <div class="fixer-divider">· · ·</div>
@@ -57,7 +65,7 @@
             <section class="fixer-section">
               <p>You don't need a framework.</p>
               <p>You don't need a deck.</p>
-              <p>You need 30 minutes of calm thinking with someone who's been here before.</p>
+              <p>You need 15 minutes of calm thinking with someone who's been here before.</p>
             </section>
 
             <div class="fixer-divider">—</div>
@@ -93,13 +101,13 @@
               <span>For:</span> <em class="rx-handwriting">Whatever's stuck</em>
             </div>
             <div class="fixer-rx-line">
-              <span>Dosage:</span> <em class="rx-handwriting">30 minutes</em>
+              <span>Dosage:</span> <em class="rx-handwriting">15 minutes</em>
             </div>
             <div class="fixer-rx-line">
-              <span>Refills:</span> <em class="rx-handwriting">Unlimited</em>
+              <span>Refills:</span> <em class="rx-handwriting">As needed</em>
             </div>
 
-            <a href="https://calendly.com/kevin-middleton/30min" class="fixer-btn">Let's talk</a>
+            <a href="https://calendly.com/kevin-middleton/15min" class="fixer-btn">Let's talk</a>
 
             <!-- Signature -->
             <div class="fixer-rx-sig">
