--- a/fixer/index.htm
+++ b/fixer/index.htm
@@ -107,7 +107,7 @@
               <span>Refills:</span> <em class="rx-handwriting">As needed</em>
             </div>
 
-            <a href="https://calendly.com/kevin-middleton/15min" class="fixer-btn">Let's talk</a>
+            <a href="https://calendly.com/kevin-middleton/15min" target="_blank" class="fixer-btn">Let's talk</a>
 
             <!-- Signature -->
             <div class="fixer-rx-sig">
